index.html in progress

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,9 @@
 @import './bootstrap/bootstrap';
 @import './fontawesome';
 @import './font';
+
+@import './modules/helpers';
+@import './modules/hero';
+@import './modules/hero-features';
+@import './modules/features';
+@import './modules/banner';
