--- a/src/scss/bootstrap/_overrides.scss
+++ b/src/scss/bootstrap/_overrides.scss
@@ -51,7 +51,7 @@ $colors:();
 // Body
 
 $body-bg: $white-dark;
-$body-color: $blue-primary;
+$body-color: rgba($blue-primary, .8);
 
 // Links
 
@@ -77,20 +77,20 @@ $font-size-sm: ($font-size-base * 0.875);
 
 $h1-font-size: $font-size-base * 3;
 $h2-font-size: $font-size-base * 2.5;
-$h3-font-size: $font-size-base * 1.5;
+$h3-font-size: $font-size-base * 1.25;
 $h4-font-size: $font-size-base * 1.17;
 $h5-font-size: $font-size-base * 1;
 $h6-font-size: $font-size-base * 1;
 
 $headings-font-weight: $font-weight-bold;
-$headings-line-height: 1.33;
+$headings-line-height: 1.2;
 
 $headings-margin-bottom:      .5em;
 $headings-font-family:        null;
 $headings-font-style:         null;
 $headings-font-weight:        $font-weight-bold;
 $headings-line-height:        1.33;
-$headings-color:              $gray;
+$headings-color:              $blue-primary;
 
 // Buttons + Forms
 
