--- a/src/scss/bootstrap/_components.scss
+++ b/src/scss/bootstrap/_components.scss
@@ -12,3 +12,4 @@
 @import './../../../node_modules/bootstrap/scss/transitions';
 @import './../../../node_modules/bootstrap/scss/accordion';
 @import './../../../node_modules/bootstrap/scss/forms';
+@import './../../../node_modules/bootstrap/scss/tables';
