changes in single.html

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,8 @@
 @import './fontawesome';
 @import './font';
 
+@import './../../node_modules/tiny-slider/src/tiny-slider';
+
 @import './modules/helpers';
 @import './modules/hero';
 @import './modules/hero-features';
