--- a/src/scss/modules/_single.scss
+++ b/src/scss/modules/_single.scss
@@ -3,7 +3,11 @@
 	&__column{
 		display: flex;
 		flex-direction: column;
-		row-gap: $spacer * 2;
+		row-gap: $spacer * .75;
+
+		@include media-breakpoint-up(md){
+			row-gap: $spacer * 1.5;
+		}
 	}
 
 	&__content{
@@ -13,5 +17,10 @@
 
 	&__price-box{
 		top: $spacer * 1.5;
+		margin-bottom: $spacer * .75;
+
+		@include media-breakpoint-up(md){
+			margin-bottom: 0;
+		}
 	}
 }
