--- a/src/scss/modules/_gallery.scss
+++ b/src/scss/modules/_gallery.scss
@@ -3,16 +3,35 @@
 		display: block;
 		overflow: hidden;
 		position: relative;
+
+		&:after{
+			font-family: 'Font Awesome 5 Free';
+			font-weight: 900;
+			content: '\f424';
+			text-align: center;
+			color: $white;
+			position: absolute;
+			inset: 0;
+			background-color: rgba($blue-primary, .8);
+			opacity: 0;
+			transition: opacity .35s;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 2.5rem;
+		}
+
+		&:hover:after{
+			opacity: 1;
+		}
 	}
 
 	&__thumbnail{
-		// // position: absolute;
-		// top: 50%;
-		// left: 50%;
-		// transform: translate(50%, 50%);
+		display: block;
+		position: relative;
 		width: 100%;
 		height: auto;
-		max-height: 28.125rem;
+		max-height: 18.75rem;
 		object-fit: cover;
 		object-position: center;
 	}
@@ -20,10 +39,15 @@
 	&__controls{
 		position: absolute;
 		top: 50%;
-		left: $spacer * -.75;
-		right: $spacer * -.75;
+		left: $spacer * 1.25;
+		right: $spacer * 1.25;
 		transform: translateY(-50%);
 		z-index: 2;
+
+		@include media-breakpoint-up(md){
+			left: $spacer * -.75;
+			right: $spacer * -.75;
+		}
 	}
 
 	&__nav-item{
