added recomended section in index.html

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,8 @@
 
 @import './../../node_modules/tiny-slider/src/tiny-slider';
 
+// @import './../../node_modules/aos/src/sass/aos';
+
 @import './modules/helpers';
 @import './modules/hero';
 @import './modules/hero-features';
