--- a/src/scss/modules/_archive.scss
+++ b/src/scss/modules/_archive.scss
@@ -1,5 +1,5 @@
 .archive{
-	row-gap: 1rem;
+	row-gap: 1.5rem;
 
 	&__image-wrapper{
 		display: block;
@@ -57,6 +57,7 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
+		justify-self: end;
 	}
 
 	&__price{
@@ -66,5 +67,15 @@
 
 	&__price-type{
 		color: $blue-third;
+	}
+
+	&__fv{
+		position: absolute;
+		top: .5rem;
+		left: .5rem;
+		padding: .5em 1em;
+		font-size: .8rem;
+		background-color: $blue-primary;
+		color: $white;
 	}
 }
